# tradingAlgo

./: .gitignore  CMakeLists.txt  README.md  tradingAlgo.cpp  tradingAlgoAlt.cpp  tradingAlgoV1.cpp  trading_algorithm_test.cpp
.github/workflows/: build.yaml
